# offerple

./: .env.example  .gitignore  .pypirc.example  ANALYSIS_RESULTS.md  CHANGELOG.md  COMMIT_MESSAGE.md  CREATE_RELEASE.md  DATA_STATUS.md  GIT_COMMANDS.sh  IPO.kt  IPOAdapter.kt  LICENSE  MANIFEST.in  MainActivity.kt  QUICKSTART.md  README.md  activity_main.xml  ipo_item.xml  pyproject.toml  requirements.txt
.github/: RELEASE_NOTES_v0.1.1.md
.github/workflows/: create-release.yml  publish-to-pypi.yml
.kiro/specs/cve-neo4j-integration/: design.md  requirements.md  tasks.md
.kiro/specs/kev-integration/: design.md  requirements.md  tasks.md
.kiro/specs/paper-evaluation-framework/: design.md  requirements.md  tasks.md
.kiro/specs/refactor-to-rota/: design.md  requirements.md  tasks.md
.kiro/specs/zero-day-prediction-system/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  research.md  structure.md  tech.md  workflow.md
archive/: README.md
archive/graph-old-version/: README.md  requirements.txt  setup_environment.ps1  setup_wsl_environment.sh  연구계획서.md  연구계획서_한학기.md
archive/graph-old-version/scripts/: download_neo4j_benchmark.py  download_synthcypher.py  generate_research_proposal.py  generate_semester_proposal.py  phase2_extract_signals.py  phase4_llm_prediction.py  run_full_pipeline.py
archive/graph-old-version/tests/: test_signal_extraction.py
config/: cve_config.yaml  cve_test_config.yaml  epss_config.yaml  example_config.yaml  exploit_config.yaml  github_advisory_config.yaml
dashboard/: README.md  app.py  index.html
data/raw/: cve_data.jsonl  epss_scores.jsonl  exploits.jsonl  github_advisory.jsonl
docs/: DATA_ROADMAP.md  DEVELOPMENT.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  MULTIMODAL_SUMMARY.md  PAPER_EXPERIMENTS_GUIDE.md  PAPER_EXPERIMENTS_RESULTS.md  PERFORMANCE_OPTIMIZATION.md  PYPI_SETUP.md  README.md  REFACTORING_PLAN.md  RESEARCH.md  RESEARCH_DIRECTIONS.md  ROKRAT_RESEARCH_PLAN.md  THIS_WEEK_ROKRAT.md  THIS_WEEK_TODO.md  TODAY_ACHIEVEMENTS.md  WORK_SUMMARY.md  data_collection_overview.md  dataset-collection-guide.md  graphiti-comparison.md  graphiti_comparison.md  masters-research-plan.md  multimodal-extension-plan.md  multimodal-quick-start.md  performance-optimization.md  prediction_system_guide.md  red-team-attack-scenarios.md  research-novelty-assessment.md  system-overview.md  usage-guide.md
docs/guides/: HOW_TO_PUBLISH.md  TEMPORAL_SETUP.md  release-guide.md  temporal-setup.md
docs/paper/: PAPER_FRAMEWORK_SUMMARY.md  QUICK_START_PAPER.md  README_LATEX.md
graph/: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  docker-compose.yml
graph/.kiro/steering/: agent.md  article.md  methodology.md  structure.md
graph/configs/: llm_config.yaml  signal_weights.yaml
graph/docker/: Dockerfile.python
graph/scripts/: generate_research_proposal_simple.py  phase1_collect_data.py  simple_data_collector.py  validate_log4shell.py
graph/src/: __init__.py
graph/src/api/: main.py
graph/src/data_collection/: __init__.py  package_collector.py  (+1 more)
graph/tests/: test_graph_analysis.py
paper/report/: README.md  rota_paper.aux  rota_paper.out  rota_paper.tex
paper/scripts/: analyze_collected_data.py  convert_enhanced_report.py  visualize_neo4j_data.py  visualize_neo4j_graph.py
scripts/: GIT_COMMANDS.ps1  README.md  benchmark_signal_collection.py  check_neo4j_data.py  collect_epss.py  collect_opensource_cves.py  create_release.ps1  create_release.sh  load_advisory_to_neo4j.py  load_cve_to_neo4j.py  load_cve_with_graphiti.py  load_epss_to_neo4j.py  load_exploits_to_neo4j.py  publish_to_pypi.py  red_team_attacks.py  run_historical_validation.py  run_historical_validation_mock.py  run_prediction_demo.py
scripts/analysis/: analyze_cve_github_links.py  check_attack_types.py  contributor_influence_analysis.py  find_vulnerability_origin.py
scripts/archive/: collect_critical_cves.py  collect_data.py  load_cve_with_graphiti.py  test_prediction_concept.py  tune_threshold.py
scripts/collection/: collect_bulk_cve.py  collect_cve_data.py  collect_exploits.py  collect_exploits_bulk.py  collect_github_advisory.py  collect_github_advisory_bulk.py  collect_github_commits_bulk.py  collect_github_commits_by_cve.py  collect_github_commits_smart.py  collect_paper_dataset.py
scripts/experiments/: historical_validation.py
scripts/loading/: analyze_commits.py  analyze_cve_commits.py  check_commit_structure.py  cleanup_neo4j.py  load_all_data.py  load_github_commits_to_neo4j.py
src/llmdump/: __version__.py
src/rota/: __init__.py  __main__.py  __version__.py  config.py
src/rota.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: README.md  check_status.py  collect_data.py  collect_image_dataset.py  load_to_neo4j.py
src/tests/: test_integrated_oracle.py
src/zero_day_defense/: __init__.py  cli.py  config.py  pipeline.py
src/zero_day_defense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_end_to_end.py  test_feature_extractor.py  test_github_signal_collector.py
(+114 files in other folders)
