[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-day-defense"
version = "0.1.0"
description = "Data collection utilities for the Zero-Day Defense research project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Research Team"}]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
