[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rota"
version = "0.1.3"
description = "Real-time Operational Threat Assessment - AI-powered zero-day vulnerability prediction system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Susie Choi", email = "susie.choi@example.com"}
]
maintainers = [
    {name = "Susie Choi", email = "susie.choi@example.com"}
]
keywords = [
    "security", 
    "vulnerability", 
    "zero-day", 
    "prediction", 
    "ai", 
    "machine-learning",
    "cybersecurity",
    "threat-assessment"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
neo4j = [
    "neo4j>=5.0",
    "py2neo>=2021.2",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/susie-Choi/rota"
Repository = "https://github.com/susie-Choi/rota"
Documentation = "https://github.com/susie-Choi/rota#readme"
"Bug Tracker" = "https://github.com/susie-Choi/rota/issues"
Changelog = "https://github.com/susie-Choi/rota/releases"

[project.scripts]
rota = "zero_day_defense.cli:main"
rota-collect = "zero_day_defense.cli:collect_main"
rota-predict = "zero_day_defense.cli:predict_main"
rota-validate = "zero_day_defense.cli:validate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zero_day_defense = ["py.typed"]
