[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmdump"
version = "0.1.0"
description = "Security analysis framework for LLM-generated content in software development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Susie Choi", email = "sschoidev@gmail.com"}
]
maintainers = [
    {name = "Susie Choi", email = "sschoidev@gmail.com"}
]
keywords = [
    "security", 
    "vulnerability", 
    "zero-day", 
    "prediction", 
    "ai", 
    "machine-learning",
    "cybersecurity",
    "threat-assessment"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
neo4j = [
    "neo4j>=5.0",
    "py2neo>=2021.2",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/susie-Choi/llmdump"
Repository = "https://github.com/susie-Choi/llmdump"
Documentation = "https://github.com/susie-Choi/llmdump#readme"
"Bug Tracker" = "https://github.com/susie-Choi/llmdump/issues"
Changelog = "https://github.com/susie-Choi/llmdump/releases"

[project.scripts]
llmdump = "llmdump.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmdump = ["py.typed"]
